syntax = "proto3";

package WaterMango_Service.Models.Proto;

service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    // Sends another greeting
    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

service PlantStatusUpdate {
    rpc SendStatus (PlantStatus) returns (stream PlantStatus) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message PlantStatus{
    int32 id = 1;
    string lastUpdate = 2;
    enum Status{
        OPEN = 0;
        WATERING = 1;
        WAIT = 2;
        ALERT = 3;
    }
    Status status = 3;
}

